# chuk-mcp-chart

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  fly.toml  pyproject.toml
src/chuk_mcp_chart/: __init__.py  helpers.py  server.py
tests/: test_server.py
